--- a/SpringBoot/src/main/resources/templates/map.html
+++ b/SpringBoot/src/main/resources/templates/map.html
@@ -23,7 +23,7 @@
     <!-- 引用Google Map API -->
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
     <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcY3bg_-X-fuVpTu54T7TXHSCSNalNbN0&callback=initMap&libraries=&v=weekly"
+        src="https://maps.googleapis.com/maps/api/js?key=yourKeys&callback=initMap&libraries=&v=weekly"
         async>
     </script>
 
